--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e85b0236",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "4  1800         3          3  8000000"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4e5f25fc",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e778a14d",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f9250887",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ce6a05ca",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2b5d3fe2",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
        "    height: 14px;\n",
        "    cursor: pointer;\n",
        "}\n",
-       "</style><body><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LinearRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.7/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
+       "</style><body><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>RandomForestRegressor</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.7/modules/generated/sklearn.ensemble.RandomForestRegressor.html\">?<span>Documentation for RandomForestRegressor</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
        "        <div class=\"estimator-table\">\n",
        "            <details>\n",
        "                <summary>Parameters</summary>\n",
@@ -683,31 +683,111 @@
        "                    \n",
        "        <tr class=\"default\">\n",
        "            <td><i class=\"copy-paste-icon\"\n",
-       "                 onclick=\"copyToClipboard('fit_intercept',\n",
+       "                 onclick=\"copyToClipboard('n_estimators',\n",
        "                          this.parentElement.nextElementSibling)\"\n",
        "            ></i></td>\n",
-       "            <td class=\"param\">fit_intercept&nbsp;</td>\n",
+       "            <td class=\"param\">n_estimators&nbsp;</td>\n",
+       "            <td class=\"value\">100</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('criterion',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">criterion&nbsp;</td>\n",
+       "            <td class=\"value\">&#x27;squared_error&#x27;</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('max_depth',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">max_depth&nbsp;</td>\n",
+       "            <td class=\"value\">None</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('min_samples_split',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">min_samples_split&nbsp;</td>\n",
+       "            <td class=\"value\">2</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('min_samples_leaf',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">min_samples_leaf&nbsp;</td>\n",
+       "            <td class=\"value\">1</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('min_weight_fraction_leaf',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">min_weight_fraction_leaf&nbsp;</td>\n",
+       "            <td class=\"value\">0.0</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('max_features',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">max_features&nbsp;</td>\n",
+       "            <td class=\"value\">1.0</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('max_leaf_nodes',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">max_leaf_nodes&nbsp;</td>\n",
+       "            <td class=\"value\">None</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('min_impurity_decrease',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">min_impurity_decrease&nbsp;</td>\n",
+       "            <td class=\"value\">0.0</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('bootstrap',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">bootstrap&nbsp;</td>\n",
        "            <td class=\"value\">True</td>\n",
        "        </tr>\n",
        "    \n",
        "\n",
        "        <tr class=\"default\">\n",
        "            <td><i class=\"copy-paste-icon\"\n",
-       "                 onclick=\"copyToClipboard('copy_X',\n",
+       "                 onclick=\"copyToClipboard('oob_score',\n",
        "                          this.parentElement.nextElementSibling)\"\n",
        "            ></i></td>\n",
-       "            <td class=\"param\">copy_X&nbsp;</td>\n",
-       "            <td class=\"value\">True</td>\n",
-       "        </tr>\n",
-       "    \n",
-       "\n",
-       "        <tr class=\"default\">\n",
-       "            <td><i class=\"copy-paste-icon\"\n",
-       "                 onclick=\"copyToClipboard('tol',\n",
-       "                          this.parentElement.nextElementSibling)\"\n",
-       "            ></i></td>\n",
-       "            <td class=\"param\">tol&nbsp;</td>\n",
-       "            <td class=\"value\">1e-06</td>\n",
+       "            <td class=\"param\">oob_score&nbsp;</td>\n",
+       "            <td class=\"value\">False</td>\n",
        "        </tr>\n",
        "    \n",
        "\n",
@@ -721,13 +801,63 @@
        "        </tr>\n",
        "    \n",
        "\n",
-       "        <tr class=\"default\">\n",
+       "        <tr class=\"user-set\">\n",
        "            <td><i class=\"copy-paste-icon\"\n",
-       "                 onclick=\"copyToClipboard('positive',\n",
+       "                 onclick=\"copyToClipboard('random_state',\n",
        "                          this.parentElement.nextElementSibling)\"\n",
        "            ></i></td>\n",
-       "            <td class=\"param\">positive&nbsp;</td>\n",
+       "            <td class=\"param\">random_state&nbsp;</td>\n",
+       "            <td class=\"value\">42</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('verbose',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">verbose&nbsp;</td>\n",
+       "            <td class=\"value\">0</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('warm_start',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">warm_start&nbsp;</td>\n",
        "            <td class=\"value\">False</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('ccp_alpha',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">ccp_alpha&nbsp;</td>\n",
+       "            <td class=\"value\">0.0</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('max_samples',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">max_samples&nbsp;</td>\n",
+       "            <td class=\"value\">None</td>\n",
+       "        </tr>\n",
+       "    \n",
+       "\n",
+       "        <tr class=\"default\">\n",
+       "            <td><i class=\"copy-paste-icon\"\n",
+       "                 onclick=\"copyToClipboard('monotonic_cst',\n",
+       "                          this.parentElement.nextElementSibling)\"\n",
+       "            ></i></td>\n",
+       "            <td class=\"param\">monotonic_cst&nbsp;</td>\n",
+       "            <td class=\"value\">None</td>\n",
        "        </tr>\n",
        "    \n",
        "                  </tbody>\n",
@@ -779,24 +909,30 @@
        "</script></body>"
       ],
       "text/plain": [
-       "LinearRegression()"
+       "RandomForestRegressor(random_state=42)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train)\n"
+    "\n",
+    "rf_model = RandomForestRegressor(\n",
+    "    n_estimators=100,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "32194239",
    "metadata": {},
    "outputs": [
@@ -804,15 +940,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 1.6298145055770874e-09\n",
-      "R2 Score: 1.0\n"
+      "MAE: 2160000.0\n",
+      "R2 Score: -18.6624\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import mean_absolute_error, r2_score\n",
     "\n",
-    "y_pred = model.predict(X_test)\n",
+    "y_pred = rf_model.predict(X_test)\n",
+    "\n",
     "\n",
     "print(\"MAE:\", mean_absolute_error(y_test, y_pred))\n",
     "print(\"R2 Score:\", r2_score(y_test, y_pred))\n"
@@ -820,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f75b8538",
    "metadata": {},
    "outputs": [],
@@ -828,7 +965,7 @@
     "import pickle\n",
     "\n",
     "with open(\"../model/model.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(model, f)\n"
+    "   pickle.dump(rf_model, f)\n"
    ]
   }
  ],
